--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,20 +6,22 @@ main{
     background-color: #e3dfdc;
     padding: 60px 20px 20px 20px;
     border-radius: 20px;
-    width: 50%;
-    height: 75%;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
 }
 
 #pad {
 
     display: grid;
-    grid-template-columns: repeat(4, minmax(80px, 1fr));
+    grid-template-columns: repeat(4, minmax(50px, 1fr));
     background-color: #cfc1b3;
     padding: 15px 10px 15px 10px;
     border-radius: 20px;
 }
 
-.digit, .operator, #zero, #clear, #equal{
+.digit, .operator, #zero, #clear, #equal, #delete{
     margin: 10px;
     border-radius: 15px;
     font-size: 1.5em;
@@ -31,6 +33,7 @@ main{
 #display{
     display: flex;
     justify-content: right;
+    align-items: center;
     aspect-ratio: 4;
     background-color: #bfbfa1;
     outline: 10px solid #1a1a1a;
@@ -40,8 +43,8 @@ main{
 }
 
 span{
-    margin: 20px 25px 15px 10px;
     font-size: 3em;
+    margin-right: 20px;
 }
 
 .operator{
@@ -58,15 +61,11 @@ span{
     color: #b14e1e;
 }
 
-.digit{
-    aspect-ratio: 1;
-}
-
 #zero {
     grid-column: 1 /3;
 }
 
-#clear{
+#clear, #delete{
     aspect-ratio: 1;
     background-color: #dc6428;
     outline: 10px solid #b14e1e;
@@ -91,6 +90,10 @@ button:hover{
     opacity: 0.75;
 }
 
-button:focus{
+button:active{
+    filter: brightness(85%)
+}
+
+.operator:focus{
     filter: brightness(85%)
 }
